published first article

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
 
         <div class="trigger">
           <a class="page-link" href="{{ "/Tutorials/" | relative_url }}">Tutorials</a>
+          <a class="page-link" href="{{ "/Articles/" | relative_url }}">Articles</a>
           <a class="page-link" href="{{ "/About/" | relative_url }}">About</a>
           <!--
           {% for path in page_paths %}
